# pdfcrunch

./: LICENSE  README.md  pyproject.toml
pdfcrunch/: __init__.py  cruncher.py  util.py  verify.py
