[tool.poetry]
name = "pdfcrunch"
version = "0.1.0"
description = ""
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pypdf2 = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
